[workspace]
members = ["imgurs-cli"]
resolver = "2"

[package]
name = "imgurs"
version = "0.9.0"
description = "API for Imgur"
license = "BSD-3-Clause"
authors = ["MedzikUser <nivua1fn@duck.com>"]
homepage = "https://github.com/MedzikUser/imgurs"
repository = "https://github.com/MedzikUser/imgurs.git"
keywords = ["imgur", "imgur-api", "image", "image-upload"]
edition = "2021"

[features]
default = ["imgur"]
full = ["imgur", "null_pointer"]
imgur = []
null_pointer = []

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[dependencies]
base64 = "0.13"
notify-rust = "4.5"
validator = "0.16"
thiserror = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "multipart"] }

[dev-dependencies]
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
