[workspace]
members = ["imgurs-cli"]
resolver = "2"

[package]
name = "imgurs"
version = "0.11.0"
description = "API for Imgur"
license = "BSD-3-Clause"
authors = ["MedzikUser <medzik@duck.com>"]
homepage = "https://github.com/MedzikUser/imgurs"
repository = "https://github.com/MedzikUser/imgurs.git"
keywords = ["imgur", "imgur-api", "image", "image-upload"]
edition = "2021"

[features]
default = ["imgur", "rustls-tls"]
full = ["imgur"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
imgur = []

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[dependencies]
# HTTP
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart"] }
# Request
base64 = "0.13"
validator = "0.16" # validate url address
# Response
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Errors
thiserror = "1.0"

[dev-dependencies]
# Async tests
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
