[package]
name = "imgurs-cli"
version = "0.9.1"
description = "CLI for Imgur"
license = "BSD-3-Clause"
authors = ["MedzikUser <nivua1fn@duck.com>"]
homepage = "https://github.com/MedzikUser/imgurs"
repository = "https://github.com/MedzikUser/imgurs.git"
keywords = ["imgur", "imgur-api", "image", "image-upload"]
categories = ["command-line-utilities"]
edition = "2021"

[[bin]]
name = "imgurs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["derive"] }
clap_complete = "3.2"
clap_mangen = "0.1"
chrono = "0.4"
colored = "2.0"
notify-rust = "4.5"
better-panic = "0.3"
dirs = "4.0"
simple_logger = "2.3"
toml = "0.5"
log = { version = "0.4", features = ["release_max_level_info"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
imgurs = { path = "..", version = "0.9.0", features = ["full"] }

[target.'cfg(not(all(unix, not(any(target_os="macos", target_os="android", target_os="emscripten")))))'.dependencies]
arboard = "2.1"
