[package]
name = "imgurs-cli"
version = "0.11.2"
description = "CLI for Imgur"
license = "BSD-3-Clause"
authors = ["M3DZIK <me@medzik.dev>"]
homepage = "https://github.com/M3DZIK/imgurs"
repository = "https://github.com/M3DZIK/imgurs.git"
keywords = ["imgur", "imgur-api", "image", "image-upload"]
categories = ["command-line-utilities"]
edition = "2021"

[[bin]]
name = "imgurs"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_mangen = "0.2"

# Errors
anyhow = "1.0"

# Logger
log = { version = "0.4", features = ["release_max_level_info"] }
simple_logger = "4.3"
colored = "2.1"

# Config
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Other
chrono = "0.4" # parse upload date
notify-rust = "4.11" # send notification after upload
dirs = "5.0" # get system configuration directory

imgurs = { path = "..", version = "0.11.0", features = ["full"] }

[target.'cfg(not(all(unix, not(any(target_os="macos", target_os="android", target_os="emscripten")))))'.dependencies]
arboard = "3.3" # copy url to clipboard
